[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/bars/bars.gd" type="Script" id=1]
[ext_resource path="res://scenes/bars/banner.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/clickable.tscn" type="PackedScene" id=3]
[ext_resource path="res://temporary/circle.png" type="Texture" id=4]

[node name="Bars" type="Control" groups=["Skinnables"]]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Top" type="ColorRect" parent="."]
anchor_right = 1.0
margin_top = -100.0
color = Color( 0, 0, 0, 1 )

[node name="V" type="VBoxContainer" parent="Top"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
theme_type_variation = "SeparationN06"

[node name="Top" type="HBoxContainer" parent="Top/V"]
margin_right = 1420.0
margin_bottom = 49.0
theme_type_variation = "SeparationP07"

[node name="SongInfo" type="Label" parent="Top/V/Top"]
margin_right = 1420.0
margin_bottom = 49.0
size_flags_horizontal = 3
theme_type_variation = "FontRegular030"

[node name="PlayedByText" type="Label" parent="Top/V/Top"]
visible = false
margin_left = 1180.0
margin_right = 1319.0
margin_bottom = 49.0
theme_type_variation = "FontRegular030"
text = "Played by"

[node name="Name" type="Label" parent="Top/V/Top"]
visible = false
margin_left = 1326.0
margin_right = 1420.0
margin_bottom = 49.0
theme_type_variation = "FontBold30"
text = "Player"

[node name="Bottom" type="HBoxContainer" parent="Top/V"]
margin_top = 43.0
margin_right = 1420.0
margin_bottom = 92.0
theme_type_variation = "SeparationP07"

[node name="DifficultyRating" type="Label" parent="Top/V/Bottom"]
margin_bottom = 49.0
theme_type_variation = "FontRegular030"

[node name="DifficultyIcon" type="TextureRect" parent="Top/V/Bottom"]
margin_left = 7.0
margin_right = 32.0
margin_bottom = 49.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="ChartInfo" type="Label" parent="Top/V/Bottom"]
margin_left = 39.0
margin_right = 1413.0
margin_bottom = 49.0
size_flags_horizontal = 3
theme_type_variation = "FontRegular030"

[node name="PlayDate" type="Label" parent="Top/V/Bottom"]
margin_left = 1420.0
margin_right = 1420.0
margin_bottom = 49.0
theme_type_variation = "FontRegular030"

[node name="Bottom" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 100.0
color = Color( 0.8, 0.8, 0.8, 1 )

[node name="H" type="HBoxContainer" parent="Bottom"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = "SeparationP03"

[node name="Back" parent="Bottom/H" groups=["Hoverables"] instance=ExtResource( 3 )]
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 0 )
label_text = "<<<"
style = 3

[node name="Buffer" type="ColorRect" parent="Bottom/H"]
margin_left = 253.0
margin_right = 1440.0
margin_bottom = 100.0
size_flags_horizontal = 3
color = Color( 0, 0, 0, 1 )

[node name="Profile" parent="Bottom" groups=["Hoverables"] instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -175.0
margin_right = 175.0
margin_bottom = 0.0

[node name="Organizer" type="HBoxContainer" parent="Bottom/Profile"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0

[node name="ProfilePicture" type="TextureRect" parent="Bottom/Profile/Organizer"]
margin_right = 88.0
margin_bottom = 88.0
rect_min_size = Vector2( 88, 0 )
expand = true
stretch_mode = 6

[node name="Info" type="VBoxContainer" parent="Bottom/Profile/Organizer"]
margin_left = 92.0
margin_right = 217.0
margin_bottom = 88.0
theme_type_variation = "SeparationP02"

[node name="Name" type="Label" parent="Bottom/Profile/Organizer/Info"]
margin_right = 125.0
margin_bottom = 26.0
theme_type_variation = "FontBold20"
text = "rokuhime"

[node name="Subtitle" type="Label" parent="Bottom/Profile/Organizer/Info"]
margin_top = 28.0
margin_right = 125.0
margin_bottom = 44.0
theme_type_variation = "FontRegular015"
text = "ようこぞ！"

[node name="HSeparator" type="HSeparator" parent="Bottom/Profile/Organizer/Info"]
margin_top = 46.0
margin_right = 125.0
margin_bottom = 52.0
mouse_filter = 2
size_flags_vertical = 3

[node name="Level" type="HBoxContainer" parent="Bottom/Profile/Organizer/Info"]
margin_top = 54.0
margin_right = 125.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="Bottom/Profile/Organizer/Info/Level"]
margin_right = 63.0
margin_bottom = 16.0
theme_type_variation = "FontRegular015"
text = "Level 435"

[node name="TextureRect" type="TextureRect" parent="Bottom/Profile/Organizer/Info/Level"]
margin_left = 67.0
margin_right = 78.0
margin_bottom = 11.0
rect_min_size = Vector2( 11, 11 )
size_flags_vertical = 0
expand = true

[node name="Accuracy" type="Label" parent="Bottom/Profile/Organizer/Info"]
margin_top = 72.0
margin_right = 125.0
margin_bottom = 88.0
theme_type_variation = "FontRegular015"
text = "100.00% Accuracy"

[node name="Right" type="VBoxContainer" parent="Bottom/Profile/Organizer"]
margin_left = 221.0
margin_right = 338.0
margin_bottom = 88.0
size_flags_horizontal = 3
theme_type_variation = "SeparationN08"

[node name="Banners" type="HBoxContainer" parent="Bottom/Profile/Organizer/Right"]
margin_right = 117.0
margin_bottom = 30.0
alignment = 2

[node name="Banner1" parent="Bottom/Profile/Organizer/Right/Banners" instance=ExtResource( 2 )]
margin_left = 19.0
margin_right = 49.0

[node name="Banner2" parent="Bottom/Profile/Organizer/Right/Banners" instance=ExtResource( 2 )]
margin_left = 53.0
margin_right = 83.0

[node name="Banner3" parent="Bottom/Profile/Organizer/Right/Banners" instance=ExtResource( 2 )]
margin_left = 87.0
margin_right = 117.0

[node name="Rank" type="Label" parent="Bottom/Profile/Organizer/Right"]
margin_top = 22.0
margin_right = 117.0
margin_bottom = 88.0
theme_type_variation = "FontRegular045"
text = "#1"
align = 2

[connection signal="clicked" from="Bottom/H/Back" to="." method="back_button_pressed"]
